# keyboard-trainer

./: .gitignore  AppName.qml  AuthLanguageSelector.qml  AuthThemeSwitch.qml  CMakeLists.txt  LICENSE  LoginScreen.qml  Main.qml  MainMenu.qml  ProfileWindow.qml  README.md  README_EN.md  README_RU.md  RegisterScreen.qml  Resources.qrc  Setting.qml  SettingsButton.qml  SigmaTap_en_US.ts  SigmaTap_ru_RU.ts  TypingLesson.qml  TypingResults.qml  TypingTrainerEN.qml  TypingTrainerRU.qml  TypingTrainerTest.qml  authmanager.cpp  authmanager.h  keyboardhandler.cpp  keyboardhandler.h  languagemanager.cpp  languagemanager.h  lessonmanager.cpp  lessonmanager.h  main.cpp  randomtextgenerator.cpp  randomtextgenerator.h  thememanager.cpp  thememanager.h  timetracker.cpp  timetracker.h  userstatsmanager.cpp  (+3 more)
Assets/database/: TextElements.db  UsersDB.db  rawButtons.txt  для уроков  профиль 2.0.txt  профиль.txt
